# data-size

./: LICENSE  Makefile  README.md  data-size.cabal
Data/: Size.hs
Data/Size/: Base.hs  Instances.hs
