name:                data-size
version:             0.1.4.0
synopsis:            Profiling of data structures
description:         Profiling of data structures
                     for counting the # of object allocated for a value
                     and estimating the total # of words used for a value.
                     Statistics for every type or constructor
                     occuring as component or subcomponent are gathered.
license:             MIT
license-file:        LICENSE
author:              Uwe Schmidt
maintainer:          uwe@fh-wedel.de
copyright:           2013 Uwe Schmidt
category:            Testing
build-type:          Simple

cabal-version:       >=1.10

flag with-heap-view
  description:         Used for tests with ghc-7.6 and bytestring-0.10.0.2
  default:             False

library
  exposed-modules:     Data.Size
                       Data.Size.Base
  other-modules:       Data.Size.Instances

  other-extensions:    DefaultSignatures
                     , DeriveDataTypeable
                     , BangPatterns

  build-depends:       base        >= 4.6    && < 5
                     , containers  >= 0.5
                     , deepseq     >= 1.2
                     , text        >= 0.11.1
  if flag(with-heap-view)
    build-depends:     bytestring  <= 0.10.0.2
                     , short-bytestring
  else
    build-depends:     bytestring  >  0.10.0.2

  hs-source-dirs:      .

  ghc-options:         -Wall -fwarn-tabs

  default-language:    Haskell2010
